--- a/pdf-to-image.html
+++ b/pdf-to-image.html
@@ -37,39 +37,67 @@
 
     main {
       max-width: 600px;
-      margin: 30px auto;
+      margin: 40px auto;
       background: #fff;
-      padding: 20px;
-      border-radius: 12px;
+      padding: 24px;
+      border-radius: 14px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+    }
+
+    h1 {
+      margin-top: 0;
+      font-size: 24px;
+    }
+
+    p {
+      color: #555;
+      font-size: 15px;
     }
 
     input[type="file"] {
       width: 100%;
-      margin: 15px 0;
-    }
-
-    button {
-      width: 100%;
+      margin: 18px 0;
       padding: 12px;
-      background: #4f46e5;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
+      border: 2px dashed #e5e7eb;
+      border-radius: 10px;
+      background: #fafafa;
       cursor: pointer;
     }
 
-    button:disabled {
+    /* 🔵 PIXORA PRIMARY BUTTON (STANDARD) */
+    .primary-btn {
+      width: 100%;
+      padding: 14px;
+      background: #4f46e5;
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s ease;
+    }
+
+    .primary-btn:hover {
+      background: #4338ca;
+    }
+
+    .primary-btn:disabled,
+    .primary-btn.loading {
       background: #9ca3af;
       cursor: not-allowed;
     }
 
     .note {
-      margin-top: 15px;
+      margin-top: 18px;
       font-size: 13px;
-      color: #555;
+      color: #666;
       text-align: center;
+    }
+
+    .note a {
+      color: #4f46e5;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -90,15 +118,28 @@
   <h1>PDF to Image Converter</h1>
   <p>Convert PDF pages to images instantly. Free, private, and secure.</p>
 
-  <input type="file" accept="application/pdf">
+  <input type="file" id="pdfInput" accept="application/pdf">
 
-  <button disabled>Convert PDF to Images</button>
+  <!-- SAME BLUE BUTTON AS OTHER TOOLS -->
+  <button id="convertBtn" class="primary-btn" disabled>
+    Convert PDF to Images
+  </button>
 
   <div class="note">
     100% client-side • No upload • Secure & private  
     <br><a href="index.html">← Back to Pixora</a>
   </div>
 </main>
+
+<script>
+  // Enable button only when file is selected (basic UX)
+  const pdfInput = document.getElementById("pdfInput");
+  const btn = document.getElementById("convertBtn");
+
+  pdfInput.addEventListener("change", () => {
+    btn.disabled = !pdfInput.files.length;
+  });
+</script>
 
 </body>
 </html>
