--- a/pdf-to-image.html
+++ b/pdf-to-image.html
@@ -109,7 +109,7 @@
     <img src="logo.png" alt="Pixora logo" class="logo">
     <div>
       <div style="font-weight:600;">Pixora</div>
-      <div style="font-size:12px;color:#555;">Your files never leave your device</div>
+      <div style="font-size:12px;color:#555;">Your images never leave your device</div>
     </div>
   </a>
 </header>
