--- a/pdf-to-image.html
+++ b/pdf-to-image.html
@@ -55,15 +55,14 @@
     }
 
     input[type="file"] {
-      width: 100%;
-      margin: 18px 0;
-      padding: 12px;
-      border: 2px dashed #e5e7eb;
-      border-radius: 10px;
-      background: #fafafa;
-      cursor: pointer;
+  width: 100%;
+  margin: 15px 0;
+  padding: 10px;
+  border: none;              /* removes dotted box */
+  outline: none;             /* removes focus outline */
+  background: transparent;   /* clean look */
+  font-size: 14px;
     }
-
     /* 🔵 PIXORA PRIMARY BUTTON (STANDARD) */
     .primary-btn {
       width: 100%;
