--- a/pdf-to-image.html
+++ b/pdf-to-image.html
@@ -130,15 +130,84 @@
   </div>
 </main>
 
-<script>
-  // Enable button only when file is selected (basic UX)
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <script>
   const pdfInput = document.getElementById("pdfInput");
   const btn = document.getElementById("convertBtn");
 
-  pdfInput.addEventListener("change", () => {
-    btn.disabled = !pdfInput.files.length;
+  // PDF.js worker
+  pdfjsLib.GlobalWorkerOptions.workerSrc =
+    "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
+
+  pdfInput.addEventListener("change", async () => {
+    btn.disabled = true;
+
+    const file = pdfInput.files[0];
+    if (!file) return;
+
+    // Load PDF
+    const arrayBuffer = await file.arrayBuffer();
+    const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
+
+    const totalPages = pdf.numPages;
+
+    // 🔒 FREE LIMIT
+    if (totalPages > 3) {
+      alert(
+        `Free version supports up to 3 pages only.\nThis PDF has ${totalPages} pages.`
+      );
+      pdfInput.value = ""; // reset file
+      return;
+    }
+
+    // Enable button if within limit
+    btn.disabled = false;
   });
-</script>
+  </script>
+  <script>
+  const convertBtn = document.getElementById("convertBtn");
+
+  convertBtn.addEventListener("click", async () => {
+    convertBtn.classList.add("loading");
+    convertBtn.disabled = true;
+    convertBtn.innerText = "Converting…";
+
+    const file = pdfInput.files[0];
+    if (!file) return;
+
+    const arrayBuffer = await file.arrayBuffer();
+    const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
+
+    for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+      const page = await pdf.getPage(pageNum);
+
+      const viewport = page.getViewport({ scale: 2 }); // good quality
+      const canvas = document.createElement("canvas");
+      const ctx = canvas.getContext("2d");
+
+      canvas.width = viewport.width;
+      canvas.height = viewport.height;
+
+      await page.render({
+        canvasContext: ctx,
+        viewport: viewport
+      }).promise;
+
+      // Download image
+      const imgURL = canvas.toDataURL("image/png");
+      const link = document.createElement("a");
+      link.href = imgURL;
+      link.download = `pixora-page-${pageNum}.png`;
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
+
+    convertBtn.classList.remove("loading");
+    convertBtn.innerText = "Convert PDF to Images";
+    convertBtn.disabled = false;
+  });
+  </script>
 
 </body>
 </html>
