--- a/pdf-to-image.html
+++ b/pdf-to-image.html
@@ -131,6 +131,7 @@
 </main>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script>
   const pdfInput = document.getElementById("pdfInput");
   const btn = document.getElementById("convertBtn");
@@ -173,6 +174,7 @@
     convertBtn.innerText = "Converting…";
 
     const file = pdfInput.files[0];
+    const zip = new JSZip();
     if (!file) return;
 
     const arrayBuffer = await file.arrayBuffer();
@@ -192,18 +194,21 @@
         canvasContext: ctx,
         viewport: viewport
       }).promise;
+      const imgData = canvas
+  .toDataURL("image/png")
+  .split(",")[1];
 
-      // Download image
-      const imgURL = canvas.toDataURL("image/png");
-      const link = document.createElement("a");
-      link.href = imgURL;
-      link.download = `pixora-page-${pageNum}.png`;
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
-    }
+zip.file(`pixora-page-${pageNum}.png`, imgData, { base64: true });
+      const zipBlob = await zip.generateAsync({ type: "blob" });
 
-    convertBtn.classList.remove("loading");
+const link = document.createElement("a");
+link.href = URL.createObjectURL(zipBlob);
+link.download = "pixora-images.zip";
+document.body.appendChild(link);
+link.click();
+document.body.removeChild(link);
+      
+      convertBtn.classList.remove("loading");
     convertBtn.innerText = "Convert PDF to Images";
     convertBtn.disabled = false;
   });
