--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
       <h3>Compress Image</h3>
       <p>Reduce image size without losing quality.</p>
     </a>
+    <a class="tool-card" href="pdf-to-image.html">
+  <div class="tool-icon">📄➡️🖼️</div>
+  <h3>PDF to Image</h3>
+  <p>Convert PDF pages to images instantly. Free & private.</p>
+</a>
 
     <a class="tool-card" href="resize-image.html">
       <div class="tool-icon">📐</div>
