--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
   border-top: 1px solid #374151;
   padding-top: 15px;
 }
+    .hero-title {
+  font-size: 32px;
+  line-height: 1.3;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 14px;
+}
+
+.hero-subtitle {
+  font-size: 16px;
+  color: #6b7280;
+  text-align: center;
+  max-width: 520px;
+  margin: 0 auto 28px;
+}
+    
+    
   </style>
 </head>
 
@@ -209,8 +226,14 @@
 <main class="container">
 
   <section class="hero">
-    <h1>Every image tool you need</h1>
-    <p>Fast, private, and 100% client-side image tools.</p>
+    <h1 class="hero-title">
+  Every image tool you need, in one place
+</h1>
+
+<p class="hero-subtitle">
+  Fast, private, and 100% client-side image tools.
+  Compress, resize, convert, and optimize images — directly in your browser.
+</p>
   </section>
   <section class="categories">
   <button class="cat active">All</button>
