--- a/index.html
+++ b/index.html
@@ -214,13 +214,22 @@
 <body>
 
 <header>
-  <a href="index.html" style="display:flex; align-items:center; gap:12px; text-decoration:none; color:inherit;">
-    <img src="logo.png" alt="Pixora logo" class="logo">
-    <div>
-      <div style="font-weight:600;">Pixora</div>
-      <div style="font-size:12px;color:#555;">Your image never leaves your device</div>
+  <div class="header-inner">
+
+    <!-- 9 DOT MENU -->
+    <div class="dot-menu" title="Menu">
+      <span></span><span></span><span></span>
+      <span></span><span></span><span></span>
+      <span></span><span></span><span></span>
     </div>
-  </a>
+
+    <!-- LOGO -->
+    <img src="logo.png" alt="Pixora logo" class="logo">
+
+    <!-- BRAND NAME -->
+    <strong class="brand-name">Pixora</strong>
+
+  </div>
 </header>
 
 <main class="container">
