--- a/index.html
+++ b/index.html
@@ -206,6 +206,39 @@
   max-width: 520px;
   margin: 0 auto 28px;
 }
+    .header-inner {
+  max-width: 1100px;
+  margin: auto;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
+.brand-name {
+  font-size: 18px;
+  font-weight: 600;
+  color: #111;
+}
+
+/* 9 DOT MENU */
+.dot-menu {
+  display: grid;
+  grid-template-columns: repeat(3, 4px);
+  gap: 4px;
+  cursor: pointer;
+}
+
+.dot-menu span {
+  width: 4px;
+  height: 4px;
+  background: #6b7280;
+  border-radius: 50%;
+}
+
+.dot-menu:hover span {
+  background: #4f46e5;
+}
     
     
   </style>
