--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
 .dot-menu:hover span {
   background: #4f46e5;
 }
+    .header-spacer {
+  flex: 1;
+    }
     
     
   </style>
@@ -249,18 +252,21 @@
 <header>
   <div class="header-inner">
 
+    <!-- LOGO -->
+    <img src="logo.png" alt="Pixora logo" class="logo">
+
+    <!-- BRAND NAME -->
+    <strong class="brand-name">Pixora</strong>
+
+    <!-- PUSH RIGHT -->
+    <div class="header-spacer"></div>
+
     <!-- 9 DOT MENU -->
     <div class="dot-menu" title="Menu">
       <span></span><span></span><span></span>
       <span></span><span></span><span></span>
       <span></span><span></span><span></span>
     </div>
-
-    <!-- LOGO -->
-    <img src="logo.png" alt="Pixora logo" class="logo">
-
-    <!-- BRAND NAME -->
-    <strong class="brand-name">Pixora</strong>
 
   </div>
 </header>
