--- a/index.html
+++ b/index.html
@@ -242,8 +242,17 @@
     .header-spacer {
   flex: 1;
     }
-    
-    
+    header {
+  padding: 18px 20px;
+    }
+    .dot-menu {
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.dot-menu:active {
+  background: #f0f1f5;
+}
   </style>
 </head>
 
