--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
   background: #f3f4f6;
 }
 
-/* SHOW ON HOVER */
-.dot-menu-wrapper:hover .dot-dropdown {
+
+    .dot-menu-wrapper.active .dot-dropdown {
   display: block;
 }
   </style>
