--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   <div class="header-inner">
 
     <!-- LOGO -->
-    <img src="logo.png" alt="Pixora logo" class="logo">
+    <a href="/" class="logo-text">Pixora</a>
 
     <!-- BRAND NAME -->
     <strong class="brand-name">Pixora</strong>
