--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="google-site-verification" content="YgYI4M8YxyZRhXl79CmzVTcg8ndqSiVRKK-tKhu4SAo" />
 
 <link rel="canonical" href="https://mahmadul-rgb.github.io/pixora/">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -300,6 +301,17 @@
     .dot-menu-wrapper.active .dot-dropdown {
   display: block;
 }
+    .logo-text {
+  font-family: 'Poppins', system-ui, -apple-system, sans-serif;
+  font-size: 22px;
+  font-weight: 600;
+  letter-spacing: 0.2px;
+  text-decoration: none;
+    }
+    .logo-text {
+  display: inline-block;
+  line-height: 1;
+    }
   </style>
 </head>
 
